<resources>
    <string name="app_name">GAMANA</string>
    <string name="email">E-Mail</string>
    <string name="signup">SignUp</string>
    <string name="alreadyuser">already user ?</string>
    <string name="reenter">Reenter Password</string>
    <string name="home">Home</string>
    <string name="car">Ride</string>
    <string name="notification">notification</string>
    <string name="account">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adddriver">Add Driver</string>
    <string name="name">Enter the full name</string>
    <string name="address">Home Address</string>
    <string name="age">Enter your Age</string>
    <string name="details">Enter Your Details</string>
    <string name="ADD">Add Driver</string>
    <string name="viewbtn">View Data</string>
    <string name="update">Update</string>
    <string name="driverID">Driver ID</string>
    <string name="deletedriver">Delete Driver</string>

    <string name="addcard">Add credit or debit Card</string>
    <string name="entercarddetails">Enter Card Details</string>
    <string name="crdno">Card Number</string>
    <string name="expiredate">Expire Date (MM/YY)</string>
    <string name="cvc">CVC</string>
    <string name="savecard">Save</string>
    <string name="viewcardbtn">Card Details</string>
    <string name="crdID">Card ID</string>
    <string name="editcard">Edit Card</string>
    <string name="removecard">Remove Card</string>

    <string name="poptions">Payment Options</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
</resources>